--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chat-room",
   "version": "1.0.0",
   "description": "a simple chat room",
+  "type":"module",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
