--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type":"module",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "author": "md-abid-hussain",
   "license": "ISC",
